Fixed Filo user persona name background on mobile.

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -968,6 +968,11 @@ there.
     margin:0 3% 0 1%;
   }
 
+.six.columns.subsection.centered-persona h5{
+    background-color: black;
+    margin:0 3% 0 1%;
+  }
+  
 }
 
 /*Mobile*/
